[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-2-m1-solution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12", features = ["unstable", "attributes", "tokio1"]}
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.1.8", features = ["derive"]}
xactor = "0.7"
yahoo_finance_api = "1.1"
tide = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
